<resources>
    <string name="app_name">Tasty</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>

    <string name="empty_title">Uh-oh, the list is empty</string>
    <string name="empty_desc">You can view your added recipe here. Start adding more recipe by tapping add button</string>

    <string name="discard_title">You have unsaved changes</string>
    <string name="discard_message">Discard draft?</string>

    <string name="delete_recipe_title">You are about to delete this recipe</string>
    <string name="delete_recipe_message">This will delete %s recipe from this app. Are you sure?</string>


    <string name="discard_cta">Discard</string>
    <string name="cancel_cta">Cancel</string>
    <string name="new_recipe_cta">New Recipe</string>
    <string name="edit_recipe_cta">Update Recipe</string>
    <string name="save_cta">Save Recipe</string>
    <string name="delete_cta">Yes, delete it</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="placeholder_title">Nasi Goreng Kampung</string>
    <string name="placeholder_description">Fried rice is a dish of cooked rice that has been stir-fried in a wok or a frying pan and is usually mixed with other ingredients such as eggs, vegetables, seafood, or meat. It is often eaten by itself or as an accompaniment to another dish.</string>

    <string-array name="recipeType">
        <item>All</item>
        <item>Asian</item>
        <item>Western</item>
        <item>Dessert</item>
        <item>Italian</item>
    </string-array>

    <string-array name="randomImageUrl">
        <item>https://pixabay.com/get/gdfb9cb253adc5dff8a88dad3dae73fc9a691d3d0e13bf23822f74830b19ab82a9745e6e289cde3f35ef415658ff5b973_1920.jpg</item>
        <item>https://pixabay.com/get/gd6908cd4c9528b087ee96582853a70611ce709880f69ece8a241619923cf2d4f68e98b6b47499f264b62c762723678e9380be0c989a2b528892a9d6d42363d13_1920.jpg</item>
        <item>https://pixabay.com/get/gd113b61b33a0b37fe6241eb9f97e944118d246b19aa7e33e89943ed616bea24a4bc42e000b3c15311acdb55ead1ac138d5838a93d7f48ecd7adabbb62acff190_1920.jpg</item>
        <item>https://pixabay.com/get/gc75ccec9ec58a237d25a772b5246dda7c6864ec0cab3b55c00362aa79df03b0fd8666435a5a9ac28eda1c91d7a9e36095d8467e20ef0795d10b81033e5e47ca2_1920.jpg</item>
        <item>https://pixabay.com/get/g4b251344243de84158520b3b3978884285841ce30e230d1820365eeca6fc21298f1eb7d6e8e795e1dcb2ff2c1b20b12c7457a0d8fa1fd5e8c8dca76e24fdfe77_1920.jpg</item>
        <item>https://pixabay.com/get/gab33bb4a20e686135422d60b71f61450a7663386e98fac1807af9d34656e11c34e8f98938c047d73c150f6d8f6ad356b96f09f8b63d87cfbc3b19f674f6d44fa_1920.jpg</item>
        <item>https://pixabay.com/get/g7b041113bb78705920389c736b7b2e97a06dbe889bac2b1bf07e0d7a468aa4ce9ec6f609a3ea4188779699d8b63ddd706d86a9e2f064011a562c3116867d9060_1920.jpg</item>
        <item>https://pixabay.com/get/g1dc97d26db09b1f5b7f5aa4781f0f7eaf405e2f95f51f062dc3551abc631fbf959c5ffe1b6125a1e3625442203989ee112afcdddd76c6b53c9097f806d3f6ffc_1920.jpg</item>
        <item>https://pixabay.com/get/gdb4215a9727556e00e9a4b9d5f5446967bdd060ae88ab49029a3dcfa42799cf62413887087a2ecb25c1ae64198379dab81f510614ab872bebf4c2ca2bad00466_1920.jpg</item>
        <item>https://pixabay.com/get/g52de480c7b168dc8901bb32538ee78b8a7ecb10e84b8dcb108d9a522d75ec89822ecebc27a4c40119e6d3dbf1ff312fc8c8ad54b0c1f6b9fb4dbe3a4c7751e70_1920.jpg</item>
        <item>https://pixabay.com/get/gfae1d57ea42c705a065a37817a28e1bc209ef3718ec9c3b03170d3f71232a4f230fc6539eb791f074de3b5617d3e2014c206d8be380de972a285996f1fa5d369_1920.jpg</item>
    </string-array>
</resources>