<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="my.farhan.tasty.ui.recipeeditable.RecipeEditableVM" />

        <variable
            name="activity"
            type="my.farhan.tasty.ui.recipeeditable.RecipeEditableActivity" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackdrop"
                imageUrl="@{vm.selectedRecipe.imageUrl}"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:onClick="@{() -> activity.onBackPressed()}"
                app:icon="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> activity.deleteRecipe()}"
                android:visibility="@{vm.selectedRecipe.recipeId != 0}"
                app:icon="@drawable/ic_delete"
                app:layout_constraintEnd_toStartOf="@id/ibSave"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:id="@+id/ibSave"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> vm.saveRecipe()}"
                app:icon="@drawable/ic_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:foreground="?selectableItemBackground"
                android:onClick="@{() -> vm.randomizeImage()}"
                android:src="@drawable/ic_random"
                app:layout_constraintBottom_toBottomOf="@id/ivBackdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/purple_200" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_title"
                app:layout_constraintTop_toBottomOf="@id/ivBackdrop"
                app:placeholderText="@string/placeholder_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.selectedRecipe.title}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_description"
                app:layout_constraintTop_toBottomOf="@id/tilTitle"
                app:placeholderText="@string/placeholder_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.selectedRecipe.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRecipeType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_type"
                app:layout_constraintTop_toBottomOf="@id/tilDescription">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@={vm.selectedRecipe.recipeType}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilRecipeType" />

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?selectableItemBackground"
                android:onClick="@{() -> vm.addIngredients()}"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@id/mtvIngredients"
                app:layout_constraintStart_toEndOf="@id/mtvIngredients"
                app:layout_constraintTop_toTopOf="@id/mtvIngredients"
                app:tint="@color/purple_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/mtvIngredients"
                tools:itemCount="2"
                tools:listitem="@layout/item_list_editable" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/steps"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvIngredients" />

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?selectableItemBackground"
                android:onClick="@{() -> vm.addSteps()}"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@id/mtvSteps"
                app:layout_constraintStart_toEndOf="@id/mtvSteps"
                app:layout_constraintTop_toTopOf="@id/mtvSteps"
                app:tint="@color/purple_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/mtvSteps"
                tools:itemCount="2"
                tools:listitem="@layout/item_list_editable" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>